automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <header>
       <nav>
-        <ul><li><a href=""></a></li>
-            <li><a href=""></a></li>
-            
+        <ul><li><a href="newquestions">New Questions</a></li>
+            <li><a href="about"></a>About</li>
+
       </nav>
-        <h3><a href=""></a>
+        <h3><a href="homepage">Icebreakers</a>
         </h3>
     </header>
   </body>
