--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <ul><li><a href="newquestions">New Questions</a></li>
-            <li><a href="about"></a>About</li>
+            <li><a href="about">About</a></li>
         </ul>
       </nav>
         <h3><a href="homepage">Icebreakers</a>
